--- a/httpd.conf
+++ b/httpd.conf
@@ -1,3 +1,5 @@
+# * MODIFY LINE 254 - 283
+
 #
 # This is the main Apache HTTP server configuration file.  It contains the
 # configuration directives that give the server its instructions.
@@ -249,8 +251,8 @@ ServerName localhost:80
 # documents. By default, all requests are taken from this directory, but
 # symbolic links and aliases may be used to point to other locations.
 #
-DocumentRoot "" # MODIFY
-<Directory ""> # MODIFY
+DocumentRoot "" # * MODIFY
+<Directory ""> # * MODIFY
     #
     # Possible values for the Options directive are "None", "All",
     # or any combination of:
@@ -277,7 +279,7 @@ DocumentRoot "" # MODIFY
     #
     Require all granted
 
-	UseCanonicalName On # MODIFIED
+	UseCanonicalName On # * MODIFIED
 </Directory>
 
 #
