--- a/httpd.conf
+++ b/httpd.conf
@@ -1,5 +1,3 @@
-# * MODIFY LINE 254 - 283
-
 #
 # This is the main Apache HTTP server configuration file.  It contains the
 # configuration directives that give the server its instructions.
@@ -59,7 +57,7 @@ ServerRoot "C:/xampp/apache"
 # prevent Apache from glomming onto all bound IP addresses.
 #
 #Listen 12.34.56.78:80
-Listen 80
+Listen 81
 
 #
 # Dynamic Shared Object (DSO) Support
@@ -227,7 +225,7 @@ ServerAdmin postmaster@localhost
 #
 # If your host doesn't have a registered DNS name, enter its IP address here.
 #
-ServerName localhost:80
+ServerName localhost:81
 
 #
 # Deny access to the entirety of your server's filesystem. You must
@@ -251,8 +249,8 @@ ServerName localhost:80
 # documents. By default, all requests are taken from this directory, but
 # symbolic links and aliases may be used to point to other locations.
 #
-DocumentRoot "" # * MODIFY
-<Directory ""> # * MODIFY
+DocumentRoot ""
+<Directory "">
     #
     # Possible values for the Options directive are "None", "All",
     # or any combination of:
@@ -279,7 +277,7 @@ DocumentRoot "" # * MODIFY
     #
     Require all granted
 
-	UseCanonicalName On # * MODIFIED
+    UseCanonicalName On
 </Directory>
 
 #
